--- a/assets/templates/welldone-html5/css/defaultedd7.css
+++ b/assets/templates/welldone-html5/css/defaultedd7.css
@@ -1,6 +1,6 @@
   /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 @import url('vspacing.min.css');@import url('font-awesome.min.css');@import url('simple-line-icons.css');
-/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic);@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,300,800);@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light);}
+/*@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic);@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,300,800);@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);}
 */html {
   /* font-family: sans-serif; */
   -ms-text-size-adjust: 100%;
